# 2.5DMapToNavigation

./: .gitattributes  .gitignore  gazebo_rviz_2_5d_traversability_test_plan.md  project_context.md
src/elevation_mapping_cupy/elevation_mapping_cupy/config/core/: plugin_config.yaml
src/elevation_mapping_cupy/elevation_mapping_cupy/launch/: synthetic_depth_demo.launch.py
src/elevation_mapping_cupy/elevation_mapping_cupy/scripts/: synthetic_pointcloud_tf_publisher.py
src/elevation_nav2_bridge/: CMakeLists.txt  package.xml
src/elevation_nav2_bridge/config/: local_costmap_elevation_only.yaml
src/elevation_nav2_bridge/include/elevation_nav2_bridge/: elevation_layer.hpp
src/elevation_nav2_bridge/plugins/: elevation_layer.xml
src/elevation_nav2_bridge/src/: elevation_layer.cpp
