<?xml version="1.0"?>
<package format="3">
  <name>elevation_nav2_bridge</name>
  <version>0.0.0</version>
  <description>Nav2 costmap bridge plugins for elevation mapping.</description>
  <maintainer email="user@example.com">ElevationMap Maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>grid_map_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
